--- a/custom.css
+++ b/custom.css
@@ -6,3 +6,8 @@ html {
     width: 100%;
     height: 100%;
 }
+.navbar-transparent {
+   background-color: transparent;
+   background: transparent;
+   border-color: transparent;
+}
