--- a/custom.css
+++ b/custom.css
@@ -11,3 +11,11 @@ html {
    background: transparent;
    border-color: transparent;
 }
+
+@media(min-width:767px) {
+    .navbar {
+        padding: 20px 0;
+        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        transition: background .5s ease-in-out,padding .5s ease-in-out;
+    }
