--- a/custom.css
+++ b/custom.css
@@ -1,6 +1,8 @@
 body {
     width: 100%;
     height: 100%;
+    background-color: blue;
+
 }
 html {
     width: 100%;
@@ -24,34 +26,6 @@ html {
     }
 }
 
-
-.intro-section {
-    height: 100%;
-    padding-top: 150px;
-    text-align: center;
-    background: #fff;
-}
-
-.about-section {
-    height: 100%;
-    padding-top: 150px;
-    text-align: center;
-    background: #eee;
-}
-
-.services-section {
-    height: 100%;
-    padding-top: 150px;
-    text-align: center;
-    background: #fff;
-}
-
-.contact-section {
-    height: 100%;
-    padding-top: 150px;
-    text-align: center;
-    background: #eee;
-}
 
 
 
