--- a/custom.css
+++ b/custom.css
@@ -1,32 +1,136 @@
-body {
-    width: 100%;
-    height: 100%;
-    background-color: blue;
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:300,600,700');
+@import url('http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css');
 
-}
-html {
-    width: 100%;
-    height: 100%;
-}
-.navbar-transparent {
-   background-color: transparent;
-   background: transparent;
-   border-color: transparent;
+/* CSS Reset */
+
+html, body, div, form, fieldset, legend, label, li, ul
+{
+ 	margin: 0;
+ 	padding: 0;
 }
 
-@media(min-width:767px) {
-    .navbar {
-        padding: 20px 0;
-        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        transition: background .5s ease-in-out,padding .5s ease-in-out;
-    }
-       .top-nav-collapse {
-        padding: 0;
-    }
+table
+{
+ 	border-collapse: collapse;
+ 	border-spacing: 0;
+}
+
+th, td
+{
+ 	text-align: left;
+ 	vertical-align: top;
+}
+
+li{
+	list-style: none;
+}
+
+img { border: 0; }
+
+/* Basic Styles */
+
+body{
+	background-color: #758fb5;
+	font: 600 14px/1 'Open Sans', sans-serif;
+}
+
+#container{
+	background-color: #FFF;
+	margin: 0 auto;
+	margin-top: 10px;
+	width: 80%;
+}
+
+#banner{
+	background-color: #dc221a;
+	height: 120px;
+	overflow: hidden;
 }
 
 
+#banner h1{
+	padding: 10px;
+}
 
+#main{
+	padding: 20px;
+	padding-right: 0px;
+	min-height: 600px;
 
+}
 
+#main section, #main aside{
+	float: left;
+}
+
+#main section{
+	width: 65%;
+}
+
+#main aside{
+	width: 30%;
+	background-color: #dadaf2;
+	padding: 10px;
+	padding-top: 0px;
+}
+
+nav{
+	background-color: #023378;
+}
+
+nav ul{
+	text-align: right;
+	padding: 10px;
+}
+
+nav li{
+	display: inline;
+	border-right: 1px solid #FFF;
+	width: 100px;
+	height: 100%;
+	text-align: center;
+	padding-right: 10px;
+	padding-left: 10px;
+	color: #FFF;
+}
+
+nav li:last-child{
+	border-right: none;
+}
+
+footer{
+	text-align: center;
+	margin: 10px;
+	border-top: 1px solid black;
+	padding-bottom: 3px;
+}
+
+/* iPads (landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : landscape) {
+	#banner{
+		display: none;
+	}
+}
+
+/* iPads (portrait) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : portrait) {
+
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen
+and (min-width : 321px) {
+
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen
+and (max-width : 320px) {
+
+}
