--- a/custom.css
+++ b/custom.css
@@ -41,10 +41,25 @@ body{
 	width: 80%;
 }
 
-#banner{
-	background-color: #dc221a;
-	height: 120px;
-	overflow: hidden;
+#bannerimage {
+  width: 100%;
+  height: 200px;
+  background-color: #dc221a;
+  background-position: center;
+  text-align: center;
+}
+.resize {
+    width: 400px;
+    height: auto;
+
+}
+
+.resize {
+    width: 800px;
+    height: auto;
+    display: inline-block;
+    margin: 0 auto;
+
 }
 
 
@@ -74,29 +89,13 @@ body{
 	padding-top: 0px;
 }
 
-nav{
-	background-color: #023378;
-}
+
 
 nav ul{
 	text-align: right;
 	padding: 10px;
 }
 
-nav li{
-	display: inline;
-	border-right: 1px solid #FFF;
-	width: 100px;
-	height: 100%;
-	text-align: center;
-	padding-right: 10px;
-	padding-left: 10px;
-	color: #FFF;
-}
-
-nav li:last-child{
-	border-right: none;
-}
 
 footer{
 	text-align: center;
