--- a/custom.css
+++ b/custom.css
@@ -30,42 +30,37 @@ img { border: 0; }
 /* Basic Styles */
 
 body{
-	background-color: #758fb5;
+	background-color: darkred;
 	font: 600 14px/1 'Open Sans', sans-serif;
 }
-
+.logo{
+width: 200px;
+    text-align: center;
+    line-height:30px;
+    padding:3px 0;
+    float:initial;
+}
 #container{
 	background-color: #FFF;
 	margin: 0 auto;
 	margin-top: 10px;
 	width: 80%;
 }
+figure{
 
-#bannerimage {
-  width: 100%;
-  height: 200px;
-  background-color: #dc221a;
+background-color: #758fb5;
+
+
+
+}
+.img-responsive{
+width: 300px;
+  height: 255px;
+  background-color: #758fb5;
   background-position: center;
   text-align: center;
 }
-.resize {
-    width: 400px;
-    height: auto;
 
-}
-
-.resize {
-    width: 800px;
-    height: auto;
-    display: inline-block;
-    margin: 0 auto;
-
-}
-
-
-#banner h1{
-	padding: 10px;
-}
 
 #main{
 	padding: 20px;
@@ -93,8 +88,31 @@ body{
 
 nav ul{
 	text-align: right;
-	padding: 10px;
+	padding: 0px;
+
+
 }
+.navbar-inverse .navbar-nav>li>a {
+    color: white;
+}
+
+.navbar-inverse .navbar-brand {
+    color: white;
+}
+
+
+.navbar-inverse{
+background-color: navy;}
+}
+.active{
+background-color: red;}
+
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
+    color: #fff;
+    background-color: red;
+    }
+
+
 
 
 footer{
